Fixed overlapping creds

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ input[type="radio"]:checked + label span {
 
 footer {
  position: fixed;
- width: 100%;
+ width: 100px;
  left: 10px;
  right: 10px;
  text-align: left;
